User authentication and web socket implemented

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT=3000
 MONGO_URI=mongodb+srv://keshan-admin:XMJ3MEOuIxhFUbFq@weather-app.sl8kej6.mongodb.net/weather-app
+JWT_SECRET=pibOEtAmUWR3qZd9jMfB5CQ9rfM0rl_XYIsnVowe2rk
+FRONTEND_SERVER_URL= "http://localhost:4200"
